# DAVA-Resource-Studio

./: .gitignore  Cargo.toml  README.md
app/dvpl-pipeline/: Cargo.toml
app/dvpl-pipeline/src/: main.rs  pipeline.rs  utils.rs
app/studio/: index.html  package-lock.json  package.json
app/studio/src/: App.css  App.tsx  presence.test.ts  presence.ts  workspace.test.ts  workspace.ts
app/studio/src-tauri/: Cargo.toml  tauri.conf.json
app/studio/src-tauri/capabilities/: default.json
app/studio/src-tauri/icons/: icon.icns
app/studio/src-tauri/src/: lib.rs  main.rs
app/studio/src-tauri/src/commands/: dvpl.rs  game.rs  mod.rs  presence.rs  resource.rs  runtime.rs  vfs.rs
app/studio/src/components/: CodeEditor.test.ts  CodeEditor.tsx  Editor.tsx  FileTree.test.ts  FileTree.tsx  GraphicsView.tsx  PlaygroundView.tsx  SettingsView.tsx  ShaderCacheView.tsx  Sidebar.tsx  StatusBar.tsx
crates/dvpl/: Cargo.toml
crates/dvpl/src/: codec.rs  lib.rs
crates/dvpl/src/parsers/: material.rs  mod.rs  shader.rs  yaml.rs
crates/game/: Cargo.toml
crates/game/src/: lib.rs
crates/resourcefs/: Cargo.toml
crates/resourcefs/src/: lib.rs
