[package]
name = "dvpl-pipeline"
version = "0.1.0"
edition = "2021"
description = "CLI: copy > decrypt dvpl > optional encrypt back"

[[bin]]
name = "dvpl-pipeline"
path = "src/main.rs"

[dependencies]
dvpl      = { path = "../../crates/dvpl" }
clap      = { version = "4", features = ["derive"] }
walkdir   = "2"
anyhow    = "1"
